--- a/Linear_Regression_ml.ipynb
+++ b/Linear_Regression_ml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPE9iP3S/BVlhALKoyxL9i1",
+      "authorship_tag": "ABX9TyMaJ+YXptQeZEXhCSqa0oZM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,31 +28,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2UhJtsccJ8Xd",
-        "outputId": "acedb800-a417-4871-c176-afc9a51e0fbd"
+        "outputId": "200c68ed-2f5d-40cf-b76c-3733ff3dfb5a"
       },
       "outputs": [
         {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Predicted score 12.32776087973924 Input value [12 12  2 14  0] actual value 12\n"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([111.9736432])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ],
       "source": [
         "import tensorflow\n",
-        "import keras\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import sklearn\n",
         "from sklearn import linear_model\n",
-        "from sklearn.utils import shuffle\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
         "data = pd.read_csv('student-mat.csv', sep=';')\n",
