--- a/Linear_Regression_ml.ipynb
+++ b/Linear_Regression_ml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMaJ+YXptQeZEXhCSqa0oZM",
+      "authorship_tag": "ABX9TyN0bqhIPQTedtAK1u7ceaMp",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -73,12 +73,11 @@
         "y = data[predict_label]\n",
         "y = np.array(y)\n",
         "\n",
-        "# Train data\n",
         "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.1)\n",
         "\n",
         "linear = linear_model.LinearRegression()\n",
         "\n",
-        "# Get the best fit line for our linear model\n",
+        "# Train our model\n",
         "linear.fit(X_train, y_train)\n",
         "\n",
         "# acc is the accurancy score of our linear regression model on our data\n",
