--- a/Linear_Regression_ml.ipynb
+++ b/Linear_Regression_ml.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN0bqhIPQTedtAK1u7ceaMp",
+      "authorship_tag": "ABX9TyMpaQiXYTn4ezAHBKHF/5bO",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,28 +28,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2UhJtsccJ8Xd",
-        "outputId": "200c68ed-2f5d-40cf-b76c-3733ff3dfb5a"
+        "outputId": "cae79a8b-2c69-4424-cd1c-0bd45985d971"
       },
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([111.9736432])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Predicted score 11.870373444973465 Input value [13 12  3  6  0] actual value 12\n"
+          ]
         }
       ],
       "source": [
-        "import tensorflow\n",
         "import pandas as pd\n",
         "import numpy as np\n",
         "import sklearn\n",
